# vcztools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  _vcztoolsmodule.c  dev.py  prek.toml  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  docs.yml
.github/workflows/docker/: buildwheel.sh  shared.env
docs/: .gitignore  Makefile  _config.yml  _toc.yml  api_reference.md  bcftools_emulation.md  bgen.md  bgen_conversion.md  cli_ref.md  cloud_stores.md  format_conversion.md  installation.md  intro.md  plink.md  plink_conversion.md  python_api.md  reading_vcz.md  storage_backends.md  vcf.md
docs/_ext/: sphinx_click_groups.py
docs/data/: make_sample_vcz.py
lib/: bench_kernel.c  compute.c  formats.c  meson.build  test_compute.c  test_formats.c  test_zlib.c  tests.c  vcf_encoder.c  vcf_encoder.h
performance/: README.md  bench_padding.py  benchmarks.md  benchmarks.py  compare.py  compare_runs.py  encode_plink_bench.py  encoding_microbench.py  generate_dataset.py  plink_streaming.py
performance/data/: .gitignore  Makefile  requirements.txt
tests/: __init__.py  conftest.py  test_azure.py  test_bcftools_validation.py  test_bgen.py  test_bgen_validation.py  test_calculate.py  test_cli.py  test_cpython_interface.py  test_dtype_matrix.py  test_filter.py  test_float_dtypes.py  test_format_encoder.py  test_ftoa.py  test_icechunk.py  test_plink.py  test_plink_validation.py  test_public_api.py  test_query.py  test_regions.py  test_retrieval.py  test_samples.py  test_stats.py  test_tskit_data.py  test_utils.py  test_variant_filter.py  test_vcf_roundtrip.py  test_vcf_writer.py  test_vcf_writer_utils.py  test_vcz_builder.py  test_zarr_direct.py  utils.py  vcz_builder.py
tests/data/plink/: sample-plink-defaults.bed  sample-plink-defaults.bim  sample-plink-defaults.fam
tests/data/txt/: regions-3col.tsv  samples.txt
tests/data/vcf/: missing-gt.vcf.gz.csi  msprime_diploid.vcf.gz.csi  regenerate_vcz_fixtures.py  sample-split-alleles.vcf.gz.csi  sample.vcf.gz.csi
validation/: .gitignore  Makefile  README.md  conftest.py  generate_data.py  helpers.py  reference.py  test_bgenix.py  test_bolt_lmm.py  test_plink19.py  test_qctool.py  test_regenie.py
validation/install/: install_bgenix.sh  install_bolt_lmm.sh  install_plink19.sh  install_qctool.sh  install_regenie.sh
vcztools/: __init__.py  __main__.py  _vcztoolsmodule.c  bcftools_filter.py  bgen.py  calculate.py  cli.py  compare.py  constants.py  filter.py  format_encoder.py  ftoa.py  icechunk.py  plink.py  query.py  regions.py  retrieval.py  retrieval_async.py  samples.py  stats.py  utils.py  variant_filter.py  vcf_writer.py  vcf_writer_utils.py  virtual_fields.py  zarr_direct.py
