[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=2",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "vcztools"
description = "Implementation of bcftools for VCF Zarr"
readme = "README.md"
license = "Apache-2.0"
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "numpy>=2",
  "zarr>=3.1",
  "click>=8.2.0",
  "pandas",
  "pyparsing>=3.1.0",
  "pyranges!=0.1.3 ; python_version < '3.12'",
  "ruranges_py ; python_version >= '3.12'"
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/vcztools"

[project.scripts]
vcztools = "vcztools.cli:vcztools_main"

[dependency-groups]
test = [
  "azure-storage-blob",
  "bio2zarr",
  "cyvcf2 ; sys_platform != 'win32'",
  "hypothesis",
  "icechunk",
  "obstore",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "msprime",
  "setuptools",
  "tskit>=1",
  "xarray",
]

lint = [
  "ruff==0.15.1",
  "prek==0.3.3",
  "clang-format==19.1.7",
  "zizmor==1.24.1",
]

packaging = [
  "twine",
  "validate-pyproject[all]",
]

wheels = [
  "cibuildwheel",
]

docs = [
  "jupyter-book<2",
  "sphinx-click",
]

benchmark = [
  "bio2zarr",
  "fsspec[http]",
  "icechunk",
  "msprime",
  "obstore",
  "pandas",
  "psutil",
  "requests",
]

dev = [
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "packaging"},
  {include-group = "benchmark"},
]

[tool.setuptools]
packages = ["vcztools"]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "vcztools/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT", "PLC0415"]
#Allow uppercase names for e.g. call_AD
#Don't add strict=False to zips (B905)
ignore = ["N806", "N802", "N803", "A001", "A002", "B905", "RUF"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "bio2zarr",
  "click",
  "cyvcf2",
  "numcodecs",
  "numpy",
  "pandas",
  "pyranges",
  "pytest",
  "setuptools",
  "zarr"
]

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]
build-frontend = "build"
build-verbosity = 3
test-command = [
  "python -c \"import vcztools._vcztools\"",
  "vcztools --help",
]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
skip = ["*musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
